2008-4-2  Keishi Suenaga <skeishi@yahoo.co.jp>
		patchs by Yair K.
	* timidity/common.c
	  common.makefile.in
	  configure.in
	  doc/C/README.xaw
	  interface/arrow.xbm
	  interface/bitmaps/arrow.xbm     add
	  interface/bitmaps/check.xbm     add
	  interface/bitmaps/fast.xbm      add
	  interface/bitmaps/keydown.xbm   add
	  interface/bitmaps/keyup.xbm     add
	  interface/bitmaps/off.xbm       add
	  interface/bitmaps/on.xbm        add
	  interface/bitmaps/slow.xbm      add
	  interface/check.xbm
	  interface/Makefile.am
	  interface/off.xbm
	  interface/on.xbm
	  interface/xaw_c.c
	  interface/xaw.h
	  interface/xaw_i.c
	  interface/xdnd.c     add
	  interface/xdnd.h     add
	  interface/x_trace.c  add
	  interface/x_trace.h  add
	  Makefile.am
	  Makefile.in
	  script/unix2dos.sh
	  timidity/aiff_a.c
	  timidity/au_a.c
	  timidity/common.c
	  timidity/flac_a.c
	  timidity/gogo_a.c
	  timidity/m2m.c
	  timidity/midi_a.c
	  timidity/modmid_a.c
	  timidity/output.h
	  timidity/playmidi.c
	  file timidity/raw_a.c
	  file timidity/speex_a.c
	  file timidity/vorbis_a.c
	  timidity/wave_a.c
	  TiMidity.ad        add
	  TiMidity.ad.in     remove
	  TiMidity-uj.ad     add
	  TiMidity-uj.ad.in  remove         some improvements of XAW interface.

2008-4-1  Keishi Suenaga <skeishi@yahoo.co.jp>
		a patch by Milan Zamazal
	* timidity/playmidi.c
	  timidity/playmidi.h
	  timidity/readmidi.c
	  timidity/timidity.c   add preserve-silence option

2008-3-31  Keishi Suenaga <skeishi@yahoo.co.jp>
        a patch from Yair K.
	* configure.in
	  utils/support.c
	  utils/support.h        fix-snprintf-crash
	
2008-3-30  Keishi Suenaga <skeishi@yahoo.co.jp>
	patches from Yair K.
	* libarc/arc_tar.c       fix-archive-add-crash
	* timidity/reverb.c      fix-reverb-crash-from-Debian
	* timidity/miditrace.c   fix-soundspec-in-trace-mode
	* autoconf/utils.m4
	  configure.in
	  timidity/Makefile.am
	  timidity/midi_a.c
	  timidity/output.c
	  timidity/reverb.c
	  timidity/reverb.h