@@ -1,8 +1,0 @@
-#define arrow_width 32
-#define arrow_height 14
-static unsigned char arrow_bits[] = {
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x18, 0x00, 0x00, 0x00, 0x68, 0x00, 0x00, 0x00, 0x88, 0x01, 0x00, 0x00,
-  0x08, 0x06, 0x00, 0x00, 0x88, 0x1f, 0x00, 0x00, 0xe8, 0x07, 0x00, 0x00,
-  0xf8, 0x01, 0x00, 0x00, 0x78, 0x00, 0x00, 0x00, 0x18, 0x00, 0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, };
