@@ -1,5 +1,0 @@
-#define check_width 11
-#define check_height 11
-static unsigned char check_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x0e, 0x06, 0x0c, 0x03, 0x8c, 0x03, 0xcc, 0x01,
-   0xec, 0x00, 0x7c, 0x00, 0x3c, 0x00, 0x18, 0x00, 0x00, 0x00};
