@@ -1,9 +1,0 @@
-#define on_width 32
-#define on_height 16
-static unsigned char on_bits[] = {
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x1e, 0xe7, 0x00, 0x00, 0x33, 0x4e, 0x00, 0x80, 0x61, 0x4e, 0x00,
-  0x80, 0x61, 0x5a, 0x00, 0x80, 0x61, 0x5a, 0x00, 0x80, 0x61, 0x72, 0x00,
-  0x80, 0x61, 0x72, 0x00, 0x00, 0x33, 0x62, 0x00, 0x00, 0x1e, 0x47, 0x00,
-  0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-  0x00, 0x00, 0x00, 0x00, };
